--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
 .App {
   text-align: center;
 }
+/* input {
+  min-width: 800px;
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* .inputWrapper {
+  border: 1px solid black;
+  max-width: 1000px;
+  border-radius: 5px;
+  padding: 20px;
+} */
+li {
+  list-style-type: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+  margin: 20px;
+  cursor: pointer;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.trashcan::after {
+  content: "\f1f8";
+  font: var(--fa-font-solid);
+  font-size: 10px;
 }
