--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,11 @@
   padding: 0;
   font-family: "Inter", sans-serif;
 }
-/* body {
-  display: flex;
-  justify-content: center;
-} */
 .App {
-  /* margin-top: 30px; */
   text-align: center;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
-  /* border: 0.5px solid #ccc;
-  border-radius: 5px;
-  max-width: 1100px;
-  width: 950px; */
 }
 h1 {
   margin: 20px;
@@ -41,8 +32,8 @@ form::before {
   color: white;
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
-  top: 0px;
-  left: 3px;
+  top: 0.5px;
+  left: 1px;
 }
 
 .input {
@@ -51,7 +42,9 @@ form::before {
   font-size: 20px;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  outline: none;
 }
 
 .addBtn {
@@ -80,12 +73,11 @@ form::before {
   font-size: 20px;
   padding: 10px 40px 10px 40px;
 }
-.testWrapper {
+.listWrapper {
   display: flex;
   justify-content: space-between;
   border: 0.5px solid #ccc;
   border-radius: 5px;
-
   margin-bottom: 20px;
   width: 830px;
 }
@@ -94,7 +86,6 @@ p {
   font-size: 20px;
   font-weight: 400;
   margin: 20px;
-  /* padding: 10px 5px 3px 5px; */
 }
 /* li {
    ako ne valja paragraph list
@@ -148,7 +139,6 @@ button {
 .trashcanBtn::after {
   content: "\f1f8";
   font: var(--fa-font-solid);
-  font-size: 20px;
   color: #db3345;
   margin-right: 30px;
 }
@@ -170,11 +160,30 @@ button {
   color: #db3345;
 }
 .edit {
-  /* left: -120px;*/
   width: 620px;
-  /* height: 20px; */
   font-size: 20px;
   padding: 20px;
-  /* border: none; */
+  border: none;
   outline: none;
+}
+
+.editSaveBtn {
+  background: transparent;
+  margin-left: 30px;
+}
+.editSaveBtn::after {
+  content: "\f0c7";
+  font: var(--fa-font-solid);
+  font-size: 30px;
+  color: #20a3b7;
+}
+.editExitBtn {
+  background: transparent;
+  margin-right: 30px;
+}
+.editExitBtn::after {
+  content: "\f057";
+  font: var(--fa-font-solid);
+  font-size: 30px;
+  color: #db3345;
 }
